# pypotrace-windows

./: CONTRIBUTORS  README.md  build_python.txt  cysetuptools.py  libpotrace-0.lib  setup.cfg
potrace/agg/: basics.pxd  curves.pxd
tests/potrace/: _potrace.cp38-win_amd64.pyd  bezier.cp38-win_amd64.pyd
tests/potrace/agg/: curves.cp38-win_amd64.pyd
