[metadata]
name = pypotrace-windows
version = 0.2
description = potrace Python bindings. Compiled for windows
long_description = file: README.rst
keywords = potrace bitmap vector graphics
author = Francesco Santini
author_email = francesco.santini@gmail.com
url = http://github.com/dafne-imaging/pypotrace-windows
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
packages = find:
setup_requires = cython
install_requires = numpy

[options.extras_require]
dev =
    nose
    pillow
    cython<0.29

[options.packages.find]
exclude = *.tests *.tests.* tests.* tests

[cython-module: potrace._potrace]
sources = potrace/_potrace.pyx
include_dirs = eval(__import__('numpy').get_include())
#libraries = libpotrace-0
extra_link_args = libpotrace.a

[cython-module: potrace.bezier]
sources = potrace/bezier.pyx
language = c++
include_dirs = eval(__import__('numpy').get_include())
extra_link_args = agg_mini/agg_curves.obj

[cython-module: potrace.agg.curves]
sources = potrace/agg/curves.pyx
language = c++
extra_link_args = agg_mini/agg_curves.obj
